# aivision

./: pyproject.toml
aivision/: __init__.py
aivision/cfg/: __init__.py  default.yaml
aivision/data/: __init__.py  annotator.py  augment.py  base.py  build.py  converter.py  dataset.py  loaders.py  split.py  split_dota.py  utils.py
aivision/engine/: exporter.py  model.py  predictor.py  results.py  trainer.py  tuner.py  validator.py
aivision/hub/: __init__.py  auth.py  session.py  utils.py
aivision/models/: __init__.py
aivision/nn/: __init__.py  autobackend.py  tasks.py  text_model.py
aivision/optim/: __init__.py  muon.py
aivision/solutions/: __init__.py  ai_gym.py  analytics.py  config.py  distance_calculation.py  heatmap.py  instance_segmentation.py  object_blurrer.py  object_counter.py  object_cropper.py  parking_management.py  queue_management.py  region_counter.py  security_alarm.py  similarity_search.py  solutions.py  speed_estimation.py  streamlit_inference.py  trackzone.py  vision_eye.py
aivision/trackers/: __init__.py  basetrack.py  bot_sort.py  byte_tracker.py  deep_oc_sort.py  fast_tracker.py  oc_sort.py  track.py  track_tracker.py
aivision/utils/: __init__.py  autobatch.py  autodevice.py  benchmarks.py  checks.py  dist.py  downloads.py  errors.py  events.py  files.py  git.py  instance.py  logger.py  (+12 more)
examples/cpp/OpenVINO/: CMakeLists.txt  inference.cc  inference.h  main.cc
tests/: __init__.py  cache_test_assets.py  conftest.py  test_cli.py  test_cuda.py  test_engine.py  test_exports.py  test_integrations.py  test_python.py  test_solutions.py
(+296 files in other folders)
